--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,11 +1,27 @@
 /* [HORIZONTAL BARS] */
 #bar-horzontal {
+    width: 10px;
     max-width: 80%;
     padding: 0px;
-    
-    background: #222;
+    padding-left: 10px;
+    background: rgb(190, 195, 227);
     flex: 99%;
+    border: 4px solid rgb(77, 77, 77);
+    border-radius: 10px;
 }
+
+#button1 {
+    height: 30px;
+    width: 90px;
+    border: 2px solid black;
+    border-radius: 5px;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    font-family: sans-serif;
+    font-weight: 600;
+    color: black;
+}
+
 div {
     color: #fff;
     padding: 1px 0 10px 5px;
@@ -23,6 +39,7 @@ h1 {
     font-size: 1.4em;
     padding: 0;
     margin: 5px 0;
+    text-decoration: black underline;
 }
 
 .loader {
@@ -42,11 +59,15 @@ h1 {
     padding: 0px;   
 }
 #column1{
+    width: 50px;
     border: none;
     flex: 1%;
-    background: tomato;
-    color: #fff;
-    max-width: 100px;
+    background: grey;
+    color: black;
+    border-radius: 10px;
+    max-width: 115px;
+    padding-top: 10px;
+    margin-right: 10px;
 }
 p{
     display:inline-block;
@@ -60,4 +81,3 @@ p{
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
 }
-    
