--- a/assignment-4/stylesheet.css
+++ b/assignment-4/stylesheet.css
@@ -1,47 +1,121 @@
-/* [HORIZONTAL BARS] */
-#bar-horzontal {
-    width: 10px;
-    max-width: 80%;
-    padding: 0px;
-    background: rgb(190, 195, 227);
-    flex: 99%;
-    border: 4px solid rgb(77, 77, 77);
+h1 {
+    font-size: 1.4em;
+    padding: 0;
+    margin: 5px 0;
 }
-
-#button1 {
-    height: 30px;
-    width: 90px;
-    border: 2px solid black;
-    border-radius: 5px;
-    margin-bottom: 10px;
-    margin-top: 10px;
-    font-family: sans-serif;
-    font-weight: 600;
-    color: black;
-}
-
-div {
-    color: #fff;
-    padding: 5px 0 5px 5px;
-    box-sizing: border-box;
-    white-space: nowrap;
-    flex: 90%;
-    margin: 3px 0;
-    border-radius: 0 5px 5px 0;
-}
-
 html, body {
     font-family: arial;
     padding: 0;
     margin: 10px;
 }
-h1 {
-    font-size: 1.4em;
-    padding: 0;
-    margin: 5px 0;
-    text-decoration: black underline;
+
+.dropdown {
+  position: relative;
+  display: inline-block;
 }
 
+span{
+    color: black;
+    background-color: tomato;
+    border: 1px solid pink;
+    border-radius: 2px;
+    padding: 4px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+}
+#dropbutton:hover{
+    box-shadow: 8px 8px 16px 0px rgba(0,0,0,0.2);
+    background-color: #222;
+    color: white;
+}
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  padding: 12px 16px;
+  z-index: 1;
+}
+.dropdown:hover .dropdown-content {
+    display: block;
+    background-color: #333;
+    padding: 0px;
+}
+
+#dropdownlist{
+    margin: 0px;
+    padding: 0px;
+}
+#items{
+    background-color: rgb(26, 87, 119);
+    box-shadow: 2px 2px 2px 0px #333;
+    color: white;
+    margin: 8px;
+    text-align: center;
+    
+    
+/*    background-color: #4CAF50;*/
+    
+    
+}
+#items:hover{
+    background-color: rgb(2, 178, 158);
+    cursor: pointer;
+    color: white;
+}
+
+
+/* [HORIZONTAL BARS] */
+#bar-horzontal {
+    max-width: 70%;
+    padding: 0px;
+    
+    background: #222;
+    flex: 99%;
+}
+#bardata {
+    color: #fff;
+    padding: 1px 5px;
+    box-sizing: border-box;
+    white-space: nowrap;
+    flex: 90%;
+    margin-bottom: 6px;  
+    margin-top: 5px;
+    transition: all 1s ease-out; 
+}
+
+#bardata:hover{
+    background: rgb(11,11,11);
+    transition: all 0.5s ease;
+}
+#tablelist{
+    color: #fff;
+    padding: 1px 5px;
+    box-sizing: border-box;
+    white-space: nowrap;
+    flex: 90%;
+    margin-bottom: 5px; 
+    margin-top: 5px;
+    border-bottom: 1px dotted black;
+    font-weight: bold;
+}
+
+.tablerow{
+    display: flex;
+    border: none;
+    padding: 0px;   
+}
+#column1{
+    border: none;
+    flex: 1%;
+    background: tomato;
+    color: #fff;
+    max-width: 105px;
+}
+
+
+
+/* Loading spinner */
 .loader {
     border: 16px solid #f3f3f3;
     border-radius: 50%;
@@ -53,26 +127,6 @@ h1 {
     animation-iteration-count: infinite;
     animation-name: spin;
 }
-
-.row{
-    display: flex;
-    border: none;
-    padding: 0px;   
-}
-
-#column1{
-    width: 50px;
-    border: none;
-    flex: 1%;
-    background: grey;
-    color: black;
-    max-width: 115px;
-    padding-top: 3px;
-}
-p{
-    display:inline-block;
-}
-
 /* Safari */
 @-webkit-keyframes spin {
     0% { -webkit-transform: rotate(0deg); }
@@ -82,3 +136,6 @@ p{
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
 }
+
+
+
